<resources>
    <string name="app_name">Tasks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_task_list">tasks</string>
    <string name="title_activity_settings">Settings</string>
    <string name="first">sunday</string>
    <string name="second">monday</string>
    <string name="third">tuesday</string>
    <string name="fourth">wednesday</string>
    <string name="fifth">thursday</string>
    <string name="sixth">friday</string>
    <string name="seventh">saturday</string>
    <string name="contact">contact</string>
    <string name="slogan">efficient task management</string>
    <string name="add">add</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="settings">settings</string>
    <string name="tasks">tasks</string>
    <string name="language">choose language</string>
    <string name="menu">menu</string>
    <string name="title_activity_task_description">Task Description</string>
    <string name="language1">language</string>
    <string name="subadding">new sub task</string>
    <string name="insert">insert a new task</string>
    <string name="subinsert">insert a new sub task</string>
    <string name="adding">new task</string>
    <string name="removed">the task was removed successfully</string>
    <string name="restore">restore</string>
    <string name="mailBody">Support for: Task</string>
    <string name="subRemoved">the sub task was removed successfully</string>
    <string name="close">click BACK again to exit</string>
    <string name="changeLang">choose language</string>
    <string name="subEdit">edit sub task</string>
    <string name="taskEdit">rename task</string>
    <string name="edit">edit</string>
    <string name="subEditing">editing sub task</string>
    <string name="description">add task description</string>
    <string name="enter">enter description for the task here</string>
</resources>
